[project]
name = "1337x-scraper"
version = "0.0.1"
description = "Tool for scraping torrents from 1337x"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv3"}
keywords = ["1337x", "scraper"]
authors = [
  {name = "Dominik Stanisław Suchora", email = "hexderm@gmail.com" }
]

dependencies = ['requests','reliq','treerequests']

classifiers = [
  "Development Status :: 5 - Production/Stable",

  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  "Operating System :: OS Independent",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/TUVIMEN/1337x-scraper"

[project.optional-dependencies]
test = [
    "pytest",
    "biggusdictus"
]
